--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <header>
 
             <h2>About</h2>
-            <p>Web Developer and Speaker and <br> Developer Community Building.</p>
+	    <p>I AM FIFTH YEAR STUDENT OF Developer <br> COMPUTER SCIENCE AT CU MDY</P> 
 
             </header>
             <p> 
