--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
             </header>
             <p> 
-             I am a Technologist at Heart, I love developer communities the most and just got super open-source.
+               I am a developer at Web . I like to create web sites.  
             </p>
                 
             <p> 
